Update login button to redirect to index.html

--- a/login.html
+++ b/login.html
@@ -27,9 +27,7 @@
       background: #7B5CFF; border: none; border-radius: 8px;
       color: #fff; font-size: 15px; cursor: pointer;
     }
-    .link {
-      margin-top: 16px; text-align: center; font-size: 13px;
-    }
+    .link { margin-top: 16px; text-align: center; font-size: 13px; }
     .link a { color: #7B5CFF; text-decoration: none; }
   </style>
 </head>
@@ -42,7 +40,9 @@
   <input type="text" placeholder="Kullanıcı adı veya GSM">
   <input type="password" placeholder="Şifre">
 
-  <button>Giriş Yap</button>
+  <button type="button" onclick="window.location.href='index.html'">
+    Giriş Yap
+  </button>
 
   <div class="link">
     Hesabın yok mu? <a href="register.html">Üye ol</a>
