Update register button and style adjustments

--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-Html
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -28,13 +27,9 @@ Html
       background: #7B5CFF; border: none; border-radius: 8px;
       color: #fff; font-size: 15px; cursor: pointer;
     }
-    .link {
-      margin-top: 16px; text-align: center; font-size: 13px;
-    }
+    .link { margin-top: 16px; text-align: center; font-size: 13px; }
     .link a { color: #7B5CFF; text-decoration: none; }
-    .kvkk {
-      font-size: 11px; color: #7A7A8C; margin-top: 10px;
-    }
+    .kvkk { font-size: 11px; color: #7A7A8C; margin-top: 10px; }
   </style>
 </head>
 <body>
@@ -49,7 +44,9 @@ Html
 
   <div class="kvkk">KVKK kapsamında bilgileriniz korunur.</div>
 
-  <button>Hesap Oluştur</button>
+  <button type="button" onclick="window.location.href='login.html'">
+    Hesap Oluştur
+  </button>
 
   <div class="link">
     Zaten üye misin? <a href="login.html">Giriş yap</a>
