--- a/index.html
+++ b/index.html
@@ -6,36 +6,26 @@
 </head>
 <body>
 
-<h1>OrtamX Ana Sayfa</h1>
-<p>Giriş başarılı, içeridesin.</p>
+<h1>🔥 OrtamX</h1>
+<p id="welcome">Yükleniyor...</p>
 
 <button id="logoutBtn">Çıkış Yap</button>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } 
+  import { auth } from "./firebase.js";
+  import { onAuthStateChanged, signOut } 
   from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyBXEF4jZppIh9QBZu4milhVB87np4dCvbE",
-    authDomain: "ortamx-2d6a2.firebaseapp.com",
-    projectId: "ortamx-2d6a2",
-    storageBucket: "ortamx-2d6a2.firebasestorage.app",
-    messagingSenderId: "264844984038",
-    appId: "1:264844984038:web:176ac4f610f840d1168527"
-  };
+  const welcome = document.getElementById("welcome");
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  // Giriş kontrolü
   onAuthStateChanged(auth, (user) => {
     if (!user) {
       window.location.href = "login.html";
+    } else {
+      welcome.innerText = "Hoş geldin kanka 👋 " + user.email;
     }
   });
 
-  // Logout
   document.getElementById("logoutBtn").onclick = async () => {
     await signOut(auth);
     window.location.href = "login.html";
