--- a/index.html
+++ b/index.html
@@ -1,36 +1,226 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
-  <title>OrtamX</title>
+  <title>Ortam</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- FONT -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }
+
+    body {
+      margin: 0;
+      background: #0F0F14;
+      color: #fff;
+    }
+
+    /* ÜST BAR */
+    header {
+      height: 64px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 24px;
+      border-bottom: 1px solid #1f1f2e;
+    }
+
+    .logo {
+      color: #7B5CFF;
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    .nav button {
+      background: none;
+      border: none;
+      color: #7B5CFF;
+      margin-left: 16px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+
+    .nav .primary {
+      background: #7B5CFF;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 8px;
+    }
+
+    /* ANA ALAN */
+    .container {
+      max-width: 1200px;
+      margin: 32px auto;
+      padding: 0 16px;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      gap: 24px;
+    }
+
+    /* SOHBET */
+    .chat-box {
+      background: #171722;
+      border-radius: 12px;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      height: 65vh;
+    }
+
+    .messages {
+      flex: 1;
+      overflow-y: auto;
+    }
+
+    .message {
+      margin-bottom: 14px;
+    }
+
+    .username {
+      color: #7B5CFF;
+      font-weight: 500;
+      font-size: 14px;
+    }
+
+    .time {
+      font-size: 11px;
+      color: #7A7A8C;
+      margin-left: 6px;
+    }
+
+    .text {
+      font-size: 14px;
+      margin-top: 4px;
+    }
+
+    /* INPUT */
+    .input-box {
+      margin-top: 12px;
+      display: flex;
+    }
+
+    .input-box input {
+      flex: 1;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid #4B3FA3;
+      background: #0F0F14;
+      color: #aaa;
+    }
+
+    .input-box input:disabled {
+      cursor: not-allowed;
+    }
+
+    /* CTA PANEL */
+    .cta {
+      background: #171722;
+      border-radius: 12px;
+      padding: 20px;
+      height: fit-content;
+    }
+
+    .cta h2 {
+      margin-top: 0;
+      font-size: 18px;
+    }
+
+    .cta p {
+      font-size: 14px;
+      color: #B5B5C5;
+      line-height: 1.4;
+    }
+
+    .cta button {
+      width: 100%;
+      margin-top: 16px;
+      padding: 12px;
+      background: #7B5CFF;
+      border: none;
+      border-radius: 8px;
+      color: #fff;
+      font-size: 15px;
+      cursor: pointer;
+    }
+
+    /* MOBİL */
+    @media (max-width: 768px) {
+      .container {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
 </head>
+
 <body>
 
-<h1>🔥 OrtamX</h1>
-<p id="welcome">Yükleniyor...</p>
+<header>
+  <div class="logo">Ortam</div>
+  <div class="nav">
+    <button onclick="location.href='login.html'">Giriş Yap</button>
+    <button class="primary" onclick="location.href='register.html'">Üye Ol</button>
+  </div>
+</header>
 
-<button id="logoutBtn">Çıkış Yap</button>
+<div class="container">
 
+  <!-- SOHBET -->
+  <div class="chat-box">
+    <div class="messages">
+      <div class="message">
+        <span class="username">Ahmet</span>
+        <span class="time">22:41</span>
+        <div class="text">Gece bayağı sakin ama güzel ortam</div>
+      </div>
+
+      <div class="message">
+        <span class="username">Zeynep</span>
+        <span class="time">22:43</span>
+        <div class="text">Aynen ya, Discord gidince boşluk oluştu</div>
+      </div>
+
+      <div class="message">
+        <span class="username">Can</span>
+        <span class="time">22:44</span>
+        <div class="text">Yeni geldim, selam millet</div>
+      </div>
+    </div>
+
+    <div class="input-box">
+      <input type="text" placeholder="Yazmak için üye ol 🔒" disabled>
+    </div>
+  </div>
+
+  <!-- CTA -->
+  <div class="cta">
+    <h2>Ortam’a hoş geldin</h2>
+    <p>
+      Türkiye için sade, hızlı ve gerçek sohbet ortamı.<br>
+      Yazmak için ücretsiz üye ol.
+    </p>
+    <button onclick="location.href='register.html'">Ücretsiz Üye Ol</button>
+  </div>
+
+</div>
+
+<!-- 🔥 AUTH KONTROLÜ (DOĞRU YER) -->
 <script type="module">
   import { auth } from "./firebase.js";
-  import { onAuthStateChanged, signOut } 
-  from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
-  const welcome = document.getElementById("welcome");
+  import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
   onAuthStateChanged(auth, (user) => {
     if (!user) {
-      window.location.href = "login.html";
+      // giriş yoksa yazı yazamaz (zaten disabled)
+      console.log("Misafir mod");
     } else {
-      welcome.innerText = "Hoş geldin kanka 👋 " + user.email;
+      console.log("Giriş yapıldı:", user.email);
     }
   });
-
-  document.getElementById("logoutBtn").onclick = async () => {
-    await signOut(auth);
-    window.location.href = "login.html";
-  };
 </script>
 
 </body>
